--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.9.8</version>
+            <version>[2.9.10,)</version>
         </dependency>
     </dependencies>
     <build>
@@ -33,7 +33,7 @@
                         <dependency>
                             <groupId>com.puppycrawl.tools</groupId>
                             <artifactId>checkstyle</artifactId>
-                            <version>8.10</version>
+                            <version>[8.18,)</version>
                         </dependency>
                         <dependency>
                             <groupId>com.github.ngeor</groupId>
